# cubbyhouse

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples_gh/: Cubbyhouse GH Example - Case 1.gh  Cubbyhouse GH Example - Case 2.gh
examples_py/: create_case_structures.py  demo1_boardstock.py  demo2_structure.py  demo3_mediator_dispatch.py  demo4_mediator_pattern_generation.py  demo5_mediator_ILP.py
results/case_1/: C_cutting_patterns.csv  E_element_group_demand.csv  J_jointing_patterns.csv  M_member_supply.csv  Q_e_element_group_quantities.csv  Q_m_member_quantities.csv  cutting_patterns.csv  cutting_patterns.json  element_3d.json  element_groups.csv  element_groups.json  element_groups_3d.json  jointing_patterns.csv  jointing_patterns.json  l_part_length_vector.csv  member_groups.csv  member_groups.json  members_1d.json  parts.csv  parts_3d.csv  parts_3d.json  results_summary_element_groups.csv  results_summary_element_groups.json  results_summary_members.csv  results_summary_members.json  results_summary_parts.csv  results_summary_parts.json  results_summary_wastage.csv  results_summary_wastage.json  section_groups.csv  section_groups.json  section_groups_3d.json  solution_x_jointing_patterns.csv  solution_x_jointing_patterns.json  solution_x_raw_cutting_patterns.csv  solution_x_raw_jointing_patterns.csv  solution_y_cutting_patterns.csv  solution_y_cutting_patterns.json  solution_y_raw_cutting_patterns.csv  w_waste_vector.csv
results/case_2/: C_cutting_patterns.csv  E_element_group_demand.csv  J_jointing_patterns.csv  M_member_supply.csv  element_3d.json  (+32 more)
(+47 files in other folders)
