[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cubbyhouse"
version = "0.1.0"
authors = [
  { name="Joe Gattas", email="j.gattas@uq.edu.au" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["timber engineering", "structural optimisation", "structural design"]
dependencies = [
    "dataclasses_json>=0.6.0",
    "jsonpickle>=3.2.0",
    "numpy>=1.24.3",
    "pandas>=2.0.1",
    "PuLP==2.8.0"
]

[project.urls]
"Homepage" = "https://github.com/Folded-Structures-Lab/cubbyhouse"

